[package]
name = "tx-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.20.0"
serde = {version="1.0.140", features = ["derive"]}
serde_json = "1.0.82"
clap = {version = "3.2.14", features = ["derive", "suggestions", "color"]}
indicatif = "0.17.0-rc.11"
reqwest = "0.11.11"
fstrings = "0.2.4-rc2"
mongodb = {version = "2.3.0", features = ["tokio-sync"]}
futures = "0.3.21"